<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_share_message">Hi! Check out the movie <xliff:g name="movie_title">%1$s</xliff:g> (<xliff:g name="movie_year">%2$s</xliff:g>). My opinion is /10. #Movies app</string>

    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="view_previous_page">Previous Page</string>
    <string name="view_next_page">Next Page</string>
    <string name="view_trailers">Trailers:</string>
    <string name="view_reviews">Reviews:</string>

    <string name="view_empty_no_connection">No Movies Available\nNo Internet Connection</string>
    <string name="view_empty_loading">Loading Movies</string>
    <string name="view_empty_no_match">No Movies Match Selected Criteria</string>
    <string name="view_empty_no_more">No More Movies Match Selected Criteria</string>
    <string name="view_empty_server_down">No Movies Available\nThe server is not returning data</string>
    <string name="view_empty_server_error">No Movies Available\nThe server is not returning valid data\nPlease check for an updated version of the app</string>

    <string name="pref_sort_title">Sort by</string>
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_sort_entryValues_default" translatable="false">@string/pref_sort_entryValues_popularity</string>
    <string name="pref_sort_entryValues_popularity" translatable="false">popularity.desc</string>
    <string name="pref_sort_entryValues_voteAverage" translatable="false">vote_average.desc</string>
    <string name="pref_sort_entries_popularity">Most popular</string>
    <string name="pref_sort_entries_voteAverage">Highest rated</string>

    <string name="pref_show_title">Show</string>
    <string name="pref_show_key" translatable="false">show</string>
    <string name="pref_show_entryValues_default" translatable="false">@string/pref_show_entryValues_all</string>
    <string name="pref_show_entryValues_all" translatable="false">all</string>
    <string name="pref_show_entryValues_favorites" translatable="false">favorites</string>
    <string name="pref_show_entries_all">All</string>
    <string name="pref_show_entries_favorites">Favorites</string>

    <string name="pref_enable_year_title">One year movies</string>
    <string name="pref_enable_year_key" translatable="false">enable_year</string>
    <string name="pref_enable_year_off">Show all movies independently of release year</string>
    <string name="pref_enable_year_on">Show only movies within chosen release year</string>

    <string name="pref_year_title">Choose year</string>
    <string name="pref_year_key" translatable="false">year</string>
    <string name="pref_year_dialogMessage">Type year in format YYYY</string>

    <string name="pref_theme_title">Theme Color</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_entryValues_default" translatable="false">@string/pref_theme_entryValues_teal</string>
    <string name="pref_theme_entryValues_teal" translatable="false">teal</string>
    <string name="pref_theme_entryValues_indigo" translatable="false">indigo</string>
    <string name="pref_theme_entryValues_deepOrange" translatable="false">deepOrange</string>
    <string name="pref_theme_entryValues_pink" translatable="false">pink</string>
    <string name="pref_theme_entryValues_blueGrey" translatable="false">blueGrey</string>
    <string name="pref_theme_entries_teal">Teal Green (Default)</string>
    <string name="pref_theme_entries_indigo">Indigo Blue</string>
    <string name="pref_theme_entries_deepOrange">Deep Orange</string>
    <string name="pref_theme_entries_pink">Pink</string>
    <string name="pref_theme_entries_blueGrey">Blue Grey</string>

    <string name="pref_movies_status_key" translatable="false">movies_status</string>
</resources>